fix hang in imap retry url, r=neil, bug 733731