mailnews/imap/src/nsImapProtocol.cpp
@@ -1867,7 +1867,6 @@ bool nsImapProtocol::ProcessCurrentURL()
 
 bool nsImapProtocol::RetryUrl()
 {
-  PR_CEnterMonitor(this);
   nsCOMPtr <nsIImapUrl> kungFuGripImapUrl = m_runningUrl;
   nsCOMPtr <nsIImapMockChannel> saveMockChannel;
 
@@ -1882,7 +1881,6 @@ bool nsImapProtocol::RetryUrl()
     imapServer->RemoveConnection(this);
   if (m_imapServerSink)
     m_imapServerSink->RetryUrl(kungFuGripImapUrl, saveMockChannel);
-  PR_CExitMonitor(this);
   return (m_imapServerSink != nsnull); // we're running a url (the same url)
 }
 
